<resources>

    <string name="app_name">Smartphone Comparison</string>
    <string name="menu_favoritos">Favourites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">About&#8230;</string>
    <string name="title_activity_main">Smartphone Comparison</string>
    <string name="title_activity_unmovil">Check Smartphone</string>
    <string name="title_activity_dosmoviles">Select Smartphones</string>
    <string name="title_activity_comparar">Compare Smartphones</string>
    <string name="title_activity_rangoprecios">Price Range</string>
    <string name="title_activity_so">Smartphones per Operating System</string>
    <string name="title_activity_ranking">Smartphones Ranking</string>
    <string name="title_activity_ultmoviles">Last Added Smartphones</string>
    <string name="title_activity_favoritos">Favourites</string>
    <string name="title_activity_informacion">About&#8230;</string>
    <string name="title_activity_configuracion">Settings</string>
    <string name="unmovilboton">Check Smartphone</string>
    <string name="dosmovilesboton">Compare Smartphones</string>
    <string name="rangopreciosboton">Price Range</string>
    <string name="soboton">Smartphones per Operating System</string>
    <string name="ultmovilesboton">Last Added Smartphones</string>
    <string name="rankingboton">Smartphones Ranking</string>
    <string name="weplan">Weplan: Mobile Plan Comparison</string>
    <string name="mv1">Smartphone 1</string>
    <string name="mv2">Smartphone 2</string>
    <string name="imagen">Image: </string>
    <string name="tocaparadescargar">Touch the image to download it\t\t</string>
    <string name="addfavoritos">Add to favourites</string>
    <string name="delfavoritos">Delete from favourites</string>
    <string name="addexito">Smartphone added to favourites</string>
    <string name="delexito">Smartphone deleted from favourites</string>
    <string name="nombre">► Name: </string>
    <string name="procesador">► CPU: </string>
    <string name="gpu">► GPU: </string>
    <string name="ram">► RAM Memory: </string>
    <string name="memoria">► Internal Memory: </string>
    <string name="cs">► Card Slot:</string>
    <string name="so">► Operating System (OS): </string>
    <string name="bateria">► Battery: </string>
    <string name="pantalla">► Display: </string>
    <string name="tampantalla">► Display Size: </string>
    <string name="respantalla">► Display Resolution: </string>
    <string name="proteccion">► Display Protection: </string>
    <string name="camara">► Camera: </string>
    <string name="conectividad">► Connectivity: </string>
    <string name="nfc">► NFC: </string>
    <string name="gps">► GPS: </string>
    <string name="radio">► FM Radio: </string>
    <string name="peso">► Weight: </string>
    <string name="medidas">► Dimensions: </string>
    <string name="precio">► Price: </string>
    <string name="resumen">► Summary: </string>
    <string name="puntuacion">► Score: </string>
    <string name="comentario">► Comment: </string>
    <string name="comentario1_0">Smartphone 1 (</string>
    <string name="comentario2_0">Smartphone 2 (</string>
    <string name="comentarioT_1">) has a score of: </string>
    <string name="comentario_mejor">The best of the two smartphones: </string>
    <string name="comentario_unmovil">This smartphone has a score of: </string>
    <string name="comparar">Compare</string>
    <string name="tope_inf">Min. Price</string>
    <string name="tope_sup">Max. Price</string>
    <string name="no_limit">No limit</string>
    <string name="so_spinner">OS</string>
    <string name="moneda">Currency</string>
    <string name="monedaE">Euro (EUR)</string>
    <string name="monedaD">Dollar (USD)</string>
    <string name="monedaP">Peso (MXN)</string>
    <string name="nombre_puntos">Write name&#8230;</string>
    <string name="autocompletar">Enter a smartphone name</string>
    <string name="error_connection">Connection problems. Please, try later.</string>
    <string name="progreso">Progress</string>
    <string name="download_moviles">Downloading smartphones&#8230;</string>
    <string name="download_datos">Downloading data&#8230;</string>

</resources>