<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/white_striped_bg"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:id="@+id/MenuLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/unmovilboton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="75dp"
            android:layout_marginTop="2dp"
            android:layout_margin="1dp"
            android:background="@drawable/menu_button"
            android:drawableRight="@drawable/telephone_blue"
            android:gravity="center"
            android:onClick="irConsultaUnMovil"
            android:text="@string/unmovilboton"
            android:textColor="@color/white"
            tools:context=".MenuApp" />

        <Button
            android:id="@+id/dosmovilesboton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="75dp"
            android:layout_margin="1dp"
            android:background="@drawable/menu_button"
            android:drawableRight="@drawable/dosmoviles_blue"
            android:gravity="center"
            android:layout_below="@+id/unmovilboton"
            android:onClick="irComparaDosMoviles"
            android:text="@string/dosmovilesboton"
            android:textColor="@color/white"
            tools:context=".MenuApp" />

        <Button
            android:id="@+id/rangopreciosboton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="75dp"
            android:layout_margin="1dp"
            android:background="@drawable/menu_button"
            android:drawableRight="@drawable/euro_blue"
            android:gravity="center"
            android:layout_below="@+id/dosmovilesboton"
            android:onClick="irRangoPrecios"
            android:text="@string/rangopreciosboton"
            android:textColor="@color/white"
            tools:context=".MenuApp" />

        <Button
            android:id="@+id/soboton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="75dp"
            android:layout_margin="1dp"
            android:background="@drawable/menu_button"
            android:drawableRight="@drawable/windows_blue"
            android:gravity="center"
            android:layout_below="@+id/rangopreciosboton"
            android:onClick="irSO"
            android:text="@string/soboton"
            android:textColor="@color/white"
            tools:context=".MenuApp" />

        <Button
            android:id="@+id/rankingboton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="75dp"
            android:layout_margin="1dp"
            android:background="@drawable/menu_button"
            android:drawableRight="@drawable/star_blue"
            android:gravity="center"
            android:layout_below="@+id/soboton"
            android:onClick="irRanking"
            android:text="@string/rankingboton"
            android:textColor="@color/white"
            tools:context=".MenuApp" />

        <Button
            android:id="@+id/ultmovilesboton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="75dp"
            android:layout_margin="1dp"
            android:background="@drawable/menu_button"
            android:drawableRight="@drawable/new_blue"
            android:gravity="center"
            android:layout_below="@+id/rankingboton"
            android:onClick="irUltimosMoviles"
            android:text="@string/ultmovilesboton"
            android:textColor="@color/white"
            tools:context=".MenuApp" />
        
        <Button
            android:id="@+id/weplan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="75dp"
            android:layout_margin="1dp"
            android:background="@drawable/menu_button"
            android:drawableRight="@drawable/weplan"
            android:gravity="center"
            android:layout_below="@+id/ultmovilesboton"
            android:onClick="irWeplan"
            android:text="@string/weplan"
            android:textColor="@color/white"
            tools:context=".MenuApp" />

        <RelativeLayout
            android:id="@+id/linearmenu4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/weplan"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:minHeight="40dp"
            android:weightSum="1.0" >
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>